# synthwave

./: .gitignore  .prettierignore  .prettierrc.json  README.md  netlify.toml  package-lock.json  package.json
.github/workflows/: ci.yml  deploy.yml  desktop.yml
client/: eslint.config.js  index.html  myconf.txt  netlify.toml  package-lock.json  package.json  vite.config.ts  yowasp_test.mjs
client/public/: manifest.webmanifest  sw.js
client/scripts/: checkSamples.mjs
client/src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
client/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/icons/: icon.icns
client/src-tauri/scripts/: bundle-linux-tools.sh  bundle-macos-tools.sh  bundle-windows-tools.ps1
client/src-tauri/src/: lib.rs  tools.rs
client/src/components/: CodeEditor.tsx  ErrorBoundary.tsx  FSMDiagram.tsx  Icons.tsx  Schematic.tsx  SynthReports.tsx  TestbenchDialog.tsx  WaveformViewer.tsx
client/src/lib/: api.ts  clientSim.ts  clientSynth.ts  diagnostics.ts  download.ts  empty-shim.js  filetypes.ts  format.ts  fsm.ts  fsmSource.ts  hierarchy.ts  liberty.ts  libertyParse.ts  moreSamples.ts  native.ts  netlist.ts  persist.ts  png.ts  ports.ts  reports.ts  samples.ts  share.ts  tbgen.ts  testresult.ts  themes.ts  toolchain.ts  vcd.ts  verilogIndex.ts  workspace.ts  zip.ts
client/src/workers/: iverilogWorker.ts  verilatorWorker.ts  yosysWorker.ts
server/: index.js  myconf.txt  package-lock.json  package.json  runner.js
(+15 files in other folders)
