[package]
name = "app"
version = "0.1.6"
description = "SynthWave desktop backend: runs the bundled iverilog/vvp/yosys/verilator toolchain"
authors = ["SynthWave contributors"]
license = "MIT"
repository = "https://github.com/puru2k/synthwave"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = ["macos-private-api"] }
tauri-plugin-log = "2"
tempfile = "3"
wait-timeout = "0.2"
